# server-apps

./: .env.example  .flake8  .gitignore  .jscpd.json  .pre-commit-config.yaml  README.md  UPDATE_GUIDE.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  rewrite.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ansible/: README.md  apply-permissions.yml  permissions.yml  ssh_access.yml  systemd_units.yml
ansible/group_vars/: all.yml
ansible/manifests/: baikal.yml  jellyfin.yml  minio.yml  restic.yml
ansible/playbooks/: enforce-ssh.yml  install-timers.yml  provision.yml  runtime.yml
ansible/tasks/: assert-runtime.yml  reconcile-startup.yml
ansible/templates/: rclone.conf.j2
compose/: base.yml  dev.yml
configs/: backup-include.txt  backup.toml  baikal-apache.conf  rclone.toml
configs/filters/: backup-include.txt  filter.txt
configs/templates/: rclone.template.conf
dockerfiles/: Dockerfile.baikal  Dockerfile.jellyfin  Dockerfile.minio  Dockerfile.rclone  Dockerfile.restic  entrypoint-baikal.sh  entrypoint-jellyfin.sh  entrypoint-minio.sh  entrypoint-rclone.sh
docs/: ARCHITECTURE.md  BACKUP_PIPELINE.md  COMPLEXITY.md  CONTRIBUTING.md  FLOW.md  HANDOFF_BACKUP_REFACTOR.md  HANDOFF_DOCS_CLEANUP.md  HANDOFF_QUALITY_TOOLING.md  HANDOFF_SRC_CLEANUP.md  NEXT_STEPS.md  QUALITY_TOOLING.md  REFACTOR_PLAN.md  REPO_STRUCTURE.md  TODO_PLAN.md  VSCODE_SETUP.md  pcloud-auth.md  permissions.md  project-specifications.md  refactor-split-health-volumes.md  start-process.md  storage.md  todo
infra/: permissions.yml
rules/semgrep/: no-mutable-module-globals.yml  no-os-system.yml  no-subprocess-in-appservices.yml  no-subprocess-popen-shell.yml  no-subprocess-shell-true.yml
runbook/: _bootstrap.py  _launcher.py  _reset.py  apply_perms.py  authorize_rclone.py  backup.py  drift_check.py  execute.py  reconcile.py  restore.py  setup.py  start.py  stop.py  test_all.py
runbook/quality/: check_ansible.py  check_complexity.py  check_dead_code.py  lizard_file_gate.py  quality_watch.py
runbook/recovery/: backup.py  restore.py
scripts/: apply-perms.py  apply-perms.sh  purge-secrets.sh  remove-generated.sh
scripts/ops/: minio_backup.py  minio_restore.py
scripts/quality/: lizard_file_gate.py  quality_watch.py
src/: init.py  secrets.py  shutdown.py
src/adapters/health/: docker_health.py
src/adapters/permissions/: ansible_adapter.py
src/adapters/rclone/: compress_stage.py  stream_sync.py
src/adapters/restic/: docker_restic.py
src/adapters/secrets/: env_provider.py  vault_provider.py
src/backup/: __init__.py  gather.py  restic.py  restore.py  stage_runner.py  stream_sync.py
src/backups/: backup.py  db_snapshot.py  gather.py  restic_runner.py  restore.py  snapshot.py
src/configuration/: __init__.py  backup_config.py  compose_config.py  rclone_config.py  state_model.py  storage_manifest.py
src/infra/: config.py  locking.py  polling.py  process.py  runtime.py  secrets.py
src/infra/docker/: compose_cli.py  compose_storage.py  rclone.py  volumes_config.py  volumes_inspector.py
src/infra/io/: state_helpers.py  state_io.py
src/managers/: checkpoint.py  pipeline.py  reconciler.py  workflow_runner.py
src/models/: compose_config.py
src/observability/: __init__.py  health.py  health_utils.py  post_start.py
src/orchestrators/: backup.py  drift_check.py  reconcile.py  reset.py  restore.py  setup.py  start.py  stop.py  sync_media.py
src/permissions/: __init__.py  ansible.py
src/ports/: __init__.py  backup_stage.py  health_prober.py  object_sync.py  permissions_runner.py  restic_runner.py  secrets.py
src/project/: init.py  shutdown.py
src/reconciler/: DEPRECATED.md  __init__.py  core.py  pipeline_actions.py  runtime_observer.py  state_machine.py
src/reconciler/adapters/: __init__.py  state_store.py
src/reconciler/domain/: __init__.py
src/reconciler/observer/: __init__.py  runtime_observer.py
src/reset/: clear_cache.py  reset_storage.py
src/storage/: __init__.py  compose.py  volumes.py
src/toolbox/: __init__.py  permissions.py  polling.py
src/toolbox/backups/: gather.py  restore.py
src/toolbox/core/: __init__.py  ansible.py  config.py  locking.py  polling.py  process.py  runtime.py  secrets.py
src/toolbox/docker/: compose.py  compose_cli.py  compose_storage.py  health.py  health_utils.py  volumes.py  volumes_config.py  volumes_inspector.py
src/toolbox/io/: __init__.py  state_helpers.py  (+1 more)
src/utils/: checkpoint.py  compose.py  locking.py  permissions.py  perms.py  polling.py  reconciler.py  runtime.py  secrets.py  state_manager.py  volumes.py
src/workflows/: __init__.py  checkpoint.py  pipeline.py  workflow_runner.py
templates/: rclone.template.conf
tests/: conftest.py  test_checkpoint_resume.py  test_gather_smoke.py  test_locking.py  test_quality_gate.py  test_reconciler.py  test_restore_runbook.py  test_restore_smoke.py  test_runtime_health.py  test_runtime_post_start.py  test_start.py  test_volume_config_drift.py  test_volumes_manifest_resolution.py
tests/e2e/: test_gather_smoke.py  test_restore_smoke.py
tests/integration/: test_reconcile_workflow.py  test_restore_runbook.py  test_runtime_health.py  test_runtime_post_start.py  test_volume_config_drift.py
tests/support/: __init__.py  asserts.py  docker_helpers.py  reconciler_helpers.py
tests/unit/: test_backup.py  test_backup_config.py  test_checkpoint_resume.py  test_compress_stage.py  test_error_handling.py  test_gather_filters.py  test_locking.py  test_minio_backup.py  test_minio_restore.py  test_pipeline.py  test_rclone_cleanup.py  test_reconcile_orchestrator.py  test_reconciler.py  test_reset.py  test_restic_push.py  test_restore.py  test_start.py  test_stop.py  test_stream_sync.py  test_sync_media.py
(+45 files in other folders)
