[build-system]
requires = ["poetry-core>=2.1.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cloud-apps"
version = "0.1.0"
description = "Runbook utilities for the cloud-apps stack"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ansible = "13.4.0"
from-root = "1.3.0"
pydantic = ">=2.11,<3.0"
python-dotenv = "1.2.1"
pyyaml = "6.0.3"
requests = "2.32.5"

[tool.poetry.group.dev.dependencies]
ansible-lint = "26.4.0"
import-linter = "2.11"
lizard = ">=1.17,<2.0"
pre-commit = ">=4.0,<5.0"
pytest = ">=7.0,<8.0"
ruff = "0.15.5"
semgrep = "1.157.0"
types-requests = "2.32.4.20260107"
vulture = ">=2.11,<3.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "A", "B", "S"]

# Suppress a couple of Bandit/semgrep-like rules that are noisy for this repo.
ignore = [
	"S603",   # subprocess call without shell=True — calls use explicit arg lists
	"S607",   # start-process-with-partial-path — project uses system binaries intentionally
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/configuration/state_model.py" = ["N815"]

# --- Layer boundary enforcement (Rule 3 from ARCHITECTURE.md) ---
# Run: PYTHONPATH=. .venv/bin/lint-imports
[tool.importlinter]
root_packages = ["src"]

[[tool.importlinter.contracts]]
name = "Domain must not import Infrastructure"
type = "forbidden"
source_modules = ["src.configuration"]
forbidden_modules = ["src.infra"]

# Aspirational: enforce that the pipeline declaration and stage runner do not
# reach into concrete docker/config adapters. Currently relaxed to allow
# src.infra.io (checkpoint state persistence). Tighten when ports cover all
# infra access.
#
# [[tool.importlinter.contracts]]
# name = "Pipeline must not import Infrastructure concrete adapters"
# type = "forbidden"
# source_modules = ["src.workflows"]
# forbidden_modules = [
#     "src.toolbox.docker.compose",
#     "src.toolbox.docker.health",
#     "src.toolbox.core.ansible",
#     "src.toolbox.docker.post_start",
# ]
